--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,8 @@
       <h2 style="margin: 0 0 16px 0; font-size: 20px; color: #007BFF;">チョコTubeについて</h2>
       <p style="margin: 0 0 16px 0; font-size: 15px; line-height: 1.6; text-align: left;">
         これは私(choco-banana-)が作ったyoutube視聴サイトです<br>
-        プロキシ、チャンネル登録、動画取得改善、m3u8での視聴の機能を追加<br <br>
+        -------------------------------------------------------------------------<br>
+        作り始めてから多くの月日が流れようやく完成しました<br><br>
         まだまだ改善すべき点はたくさんあります。<br>
         そのため意見などを<a href="https://scratch.mit.edu/projects/1252869725/" target="_blank">こちら</a>または<a href="/chat">chat</a>でどんどんお待ちしてます。<br>
         -------------------------------------------------------------------------<br>
@@ -40,7 +41,7 @@
 
 
 <div class="dashboard-container">
-    <h1 style="text-align: center; font-size: 3rem; margin-bottom: 20px; color: #8B4513;">🍫チョコTube</h1>
+    <h1 style="text-align: center; font-size: 3rem; margin-bottom: 20px; color: #8B4513;">🍫チョコTube~CSB版~</h1>
     <div class="counter-section">
         <div class="counter-box">
             <img src="https://count.getloli.com/@choco-banana-?name=choco-banana-&theme=booru-lisu&padding=6&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="訪問者カウンター" class="counter-image">
@@ -83,10 +84,13 @@
                 <span class="quick-link-icon">⚙</span>
                 <span>設定</span>
             </a>
-             <a href="/downloader" class="quick-link">
+            <a href="/downloader" class="quick-link">
                 <span class="quick-link-icon">📥</span>
                 <span>ダウンローダー</span>
             </a>
+            <a href="/subscribed-channels" class="quick-link">
+                <span class="quick-link-icon">🔔</span>
+                <span>登録チャンネル</span>
             </a>
             <a href="/history" class="quick-link">
                 <span class="quick-link-icon">📜</span>
