--- a/templates/search.html
+++ b/templates/search.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ query }} - チョコTube検索{% endblock %}
 
+{% set search_context = 'general' %}
+
 {% block content %}
 <div class="search-container">
     {% if query %}
